--- a/css/styles.css
+++ b/css/styles.css
@@ -1,48 +1,187 @@
-/* reset CSS file to reset browser default styling to a consistent starting point */
 @import url(reset.css);
 
 body {
-	font-family: "klavika-web", "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
-}
-
-.navbar {
-	position: fixed;
-	width: 1000px;
-	height: 100px;
-	top: 10px;
-	background-color: white;
-	left: 100px;
+    font-family: "klavika-web", "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
 }
 
 .slide, .object {
-	font-size: 2em;
-	position: absolute;
-	z-index: 1;
+    font-size: 2em;
+    position: absolute;
+    z-index: 1;
 }
 
 .object {
-	z-index: 2;
+    z-index: 2;
 }
 
 #slide1 {
-	background-color: red;
+    background-image: url('../img/notebook.png');
 }
 
 #slide2 {
-	background-color: blue;
+    background-image: url('../img/snow.png');
+    z-index: 3;
 }
 
 #slide3 {
-	background-color: green;
+    background-image: url('../img/geometry.png');
 }
 
 #slide4 {
-	background-color: yellow;
+    background-image: url('../img/snow.png');
+}
+
+#slide5 {
+    background-image: url('../img/snow.png');
+}
+
+#slide6 {
+    background-image: url('../img/snow.png');
+}
+
+#slide7 {
+    background-image: url('../img/snow.png');
+}
+
+#slide8 {
+    background-image: url('../img/snow.png');
 }
 
 #picture {
-	left: 200px;
-	width: 100px;
-	height: 100px;
-	background-color: black;
+    left: 200px;
+    width: 100px;
+    height: 100px;
+    background-color: black;
+}
+
+h1 {
+    font-size: 50pt;
+}
+
+.center {
+    position: absolute;
+    width: 600px;
+    height: 70px;
+    top: 50%;
+    left: 50%;
+    margin-left: -300px;
+    margin-top: -35px;
+}
+
+.logo {
+    position: absolute;
+    width: 400px;
+    height: 140px;
+    top: 50%;
+    left: 50%;
+    margin-left: -200px;
+    margin-top: -70px;
+}
+
+.subtitle {
+    position: absolute;
+    width: 400px;
+    height: 50px;
+    top: 50%;
+    left: 50%;
+    margin-left: -100px; /* margin is -0.5 * dimension */
+    margin-top: 70px;
+    font-size: 20pt;
+}
+
+.problems {
+    position: absolute;
+    height: 140px;
+    top: 50%;
+    left: 55%;
+}
+
+.point {
+    position: absolute;
+    line-height: 2em;
+}
+
+.purple {
+    color: purple;
+    font-weight: bold;
+}
+
+.title {
+    position: absolute;
+    width: 500px;
+    height: 100px;
+    top: 10%;
+    left: 50%;
+    margin-left: -250px; /* margin is -0.5 * dimension */
+    margin-top: -50px;
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+}
+
+.small {
+    font-size: 18pt;
+}
+
+.left-1 {
+    left: 10%;
+    margin-right: 10%;
+}
+.left-2 {
+    left: 20%;
+}
+.left-3 {
+    left: 30%;
+}
+.left-4 {
+    left: 40%;
+}
+.left-5 {
+    left: 50%;
+}
+.left-6 {
+    left: 60%;
+}
+.left-7 {
+    left: 70%;
+}
+.left-8 {
+    left: 80%;
+}
+.left-9 {
+    left: 90%;
+}
+.left-0 {
+    left: 100%;
+}
+
+.top-1 {
+    top: 10%;
+}
+.top-2 {
+    top: 20%;
+}
+.top-3 {
+    top: 30%;
+}
+.top-4 {
+    top: 40%;
+}
+.top-5 {
+    top: 50%;
+}
+.top-6 {
+    top: 60%;
+}
+.top-7 {
+    top: 70%;
+}
+.top-8 {
+    top: 80%;
+}
+.top-9 {
+    top: 90%;
+}
+.top-0 {
+    top: 100%;
 }
