--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,34 @@ body {
     z-index: 2;
 }
 
+.table li {
+    display: inline-block;
+    width: 300px;
+    padding: 10px;
+}
+
+.table a:link,
+.table a:visited,
+.table a:hover {
+    display: inline-block;
+    width: 300px;
+    color: #333;
+    text-decoration: none;
+    margin-bottom: 30px;
+}
+
+.table a:hover {
+    color: #777;
+}
+
+.table {
+    list-style-type: none;
+    padding: 0;
+    font-size: 20pt;
+    z-index: 5;
+    position: absolute;
+}
+
 #slide1 {
     background-image: url('../img/notebook.png');
 }
@@ -87,19 +115,16 @@ h1 {
 
 .center {
     position: absolute;
-    width: 600px;
-    height: 70px;
-    top: 50%;
+    width: 1000px;
     left: 50%;
-    margin-left: -300px;
-    margin-top: -35px;
+    margin-left: -500px;
 }
 
 .logo {
     position: absolute;
     width: 400px;
     height: 140px;
-    top: 50%;
+    top: 30%;
     left: 50%;
     margin-left: -200px;
     margin-top: -70px;
@@ -109,7 +134,7 @@ h1 {
     position: absolute;
     width: 400px;
     height: 50px;
-    top: 50%;
+    top: 30%;
     left: 50%;
     margin-left: -100px; /* margin is -0.5 * dimension */
     margin-top: 70px;
